chore: add more descs in README

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gsap Examples</title>
+  <link rel="shortcut icon" href="src/assets/favicon.png" type="image/x-icon" />
+  <meta name="description" content="Gsap Examples including: ScrollTrigger, mouseFollower, SVG, Three.js etc." />
+</head>
+
+<body>
+  <div id="root"></div>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
